// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`refresh function first test 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <ActivityIndicator
    animating={true}
    color="#999999"
    hidesWhenStopped={true}
    size="small"
    style={
      Object {
        "flex": 1,
      }
    }
  />
</View>
`;

exports[`refresh function second test 1`] = `
<View
  onRefresh={[Function]}
  refreshing={false}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
        "justifyContent": "flex-start",
      }
    }
  >
    <RCTScrollView
      automaticallyAdjustContentInsets={false}
      collapsable={undefined}
      contentInset={
        Object {
          "top": 235,
        }
      }
      contentInsetAdjustmentBehavior="never"
      contentOffset={
        Object {
          "y": 0,
        }
      }
      onScroll={[Function]}
      refreshControl={
        <RefreshControlMock
          onRefresh={[Function]}
          refreshing={false}
          style={
            Object {
              "position": "absolute",
              "top": 235,
            }
          }
        />
      }
      scrollEventThrottle={1}
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <RCTRefreshControl />
      <View>
        <View
          style={
            Object {
              "minHeight": -64,
            }
          }
        />
      </View>
    </RCTScrollView>
  </View>
  <View
    collapsable={undefined}
    pointerEvents="none"
    style={
      Object {
        "alignItems": "center",
        "height": 235,
        "justifyContent": "center",
        "left": 0,
        "overflow": "hidden",
        "padding": 10,
        "paddingTop": 20,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <Image
          collapsable={undefined}
          resizeMode="cover"
          source={
            Object {
              "uri": "https://farm3.staticflickr.com/2926/14690771011_945f91045a.jpg",
            }
          }
          style={
            Object {
              "height": 235,
              "opacity": 1,
              "position": "absolute",
              "width": 0,
            }
          }
        />
        <View
          collapsable={undefined}
          style={
            Object {
              "backgroundColor": undefined,
              "bottom": 0,
              "left": 0,
              "opacity": 0.8,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "marginTop": 44,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        collapsable={undefined}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Object {
            "backgroundColor": "transparent",
            "color": "white",
            "fontSize": 24,
            "fontWeight": "600",
            "marginBottom": 3,
            "marginHorizontal": 0,
            "textAlign": "center",
            "transform": Array [
              Object {
                "translateY": 0,
              },
            ],
          }
        }
        testID="course-details.title-lbl"
      >
        Learn React Native
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        collapsable={undefined}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Object {
            "backgroundColor": "transparent",
            "color": "white",
            "fontWeight": "600",
            "opacity": 1,
          }
        }
        testID="course-details.subtitle-lbl"
      >
        Default Term
      </Text>
    </View>
  </View>
  <Text
    accessible={false}
    allowFontScaling={true}
    collapsable={undefined}
    disabled={false}
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      Object {
        "backgroundColor": "transparent",
        "color": "#fff",
        "fontSize": 17,
        "fontWeight": "600",
        "left": 0,
        "opacity": 1,
        "paddingHorizontal": 60,
        "position": "absolute",
        "right": 0,
        "textAlign": "center",
        "top": 33,
      }
    }
  >
    rn 101
  </Text>
</View>
`;

exports[`render without course 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <ActivityIndicator
    animating={true}
    color="#999999"
    hidesWhenStopped={true}
    size="small"
    style={
      Object {
        "flex": 1,
      }
    }
  />
</View>
`;

exports[`renders correctly 1`] = `
<View
  onRefresh={undefined}
  refreshing={false}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
        "justifyContent": "flex-start",
      }
    }
  >
    <RCTScrollView
      automaticallyAdjustContentInsets={false}
      collapsable={undefined}
      contentInset={
        Object {
          "top": 235,
        }
      }
      contentInsetAdjustmentBehavior="never"
      contentOffset={
        Object {
          "y": 0,
        }
      }
      onScroll={[Function]}
      refreshControl={
        <RefreshControlMock
          onRefresh={undefined}
          refreshing={false}
          style={
            Object {
              "position": "absolute",
              "top": 235,
            }
          }
        />
      }
      scrollEventThrottle={1}
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <RCTRefreshControl />
      <View>
        <View
          style={
            Object {
              "minHeight": -64,
            }
          }
        >
          <TouchableHighlight
            accessibilityLabel={undefined}
            accessibilityTraits={
              Array [
                "button",
              ]
            }
            onPress={[Function]}
            style={
              Array [
                undefined,
                Object {
                  "borderBottomColor": "#C7CDD1",
                  "borderBottomWidth": 0.5,
                },
              ]
            }
            testID="courses-details.assignments-cell"
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "white",
                    "flex": 1,
                    "flexDirection": "row",
                    "minHeight": 54,
                    "paddingBottom": 12,
                    "paddingLeft": 16,
                    "paddingRight": 16,
                    "paddingTop": 12,
                  },
                  Object {
                    "backgroundColor": "white",
                  },
                ]
              }
            >
              <Image
                source={1}
                style={
                  Array [
                    Object {
                      "marginRight": 16,
                      "resizeMode": "contain",
                    },
                    Object {
                      "height": 24,
                      "tintColor": undefined,
                      "width": 24,
                    },
                  ]
                }
              />
              <View
                style={
                  Object {
                    "flex": 1,
                    "flexDirection": "column",
                    "justifyContent": "center",
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  disabled={false}
                  ellipsizeMode="tail"
                  numberOfLines={0}
                  style={
                    Array [
                      Object {
                        "fontFamily": ".SFUIDisplay",
                      },
                      Object {
                        "color": "#2D3B45",
                        "fontSize": 16,
                      },
                      Array [
                        Object {
                          "fontWeight": "600",
                        },
                        Object {
                          "fontWeight": "500",
                          "marginLeft": -4,
                        },
                      ],
                      Object {
                        "fontFamily": ".SFUIDisplay-medium",
                      },
                    ]
                  }
                >
                  Home
                </Text>
              </View>
              <View
                style={
                  Object {
                    "flex": 0,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "flex": 1,
                      "flexDirection": "row",
                      "justifyContent": "flex-end",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "alignSelf": "center",
                        "backgroundColor": "transparent",
                        "borderColor": "#c7c7cc",
                        "borderRightWidth": 2,
                        "borderTopWidth": 2,
                        "height": 10,
                        "marginLeft": 7,
                        "transform": Array [
                          Object {
                            "rotate": "45deg",
                          },
                        ],
                        "width": 10,
                      }
                    }
                  />
                </View>
              </View>
            </View>
          </TouchableHighlight>
        </View>
      </View>
    </RCTScrollView>
  </View>
  <View
    collapsable={undefined}
    pointerEvents="none"
    style={
      Object {
        "alignItems": "center",
        "height": 235,
        "justifyContent": "center",
        "left": 0,
        "overflow": "hidden",
        "padding": 10,
        "paddingTop": 20,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <Image
          collapsable={undefined}
          resizeMode="cover"
          source={
            Object {
              "uri": "https://farm3.staticflickr.com/2926/14690771011_945f91045a.jpg",
            }
          }
          style={
            Object {
              "height": 235,
              "opacity": 1,
              "position": "absolute",
              "width": 0,
            }
          }
        />
        <View
          collapsable={undefined}
          style={
            Object {
              "backgroundColor": undefined,
              "bottom": 0,
              "left": 0,
              "opacity": 0.8,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "marginTop": 44,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        collapsable={undefined}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Object {
            "backgroundColor": "transparent",
            "color": "white",
            "fontSize": 24,
            "fontWeight": "600",
            "marginBottom": 3,
            "marginHorizontal": 0,
            "textAlign": "center",
            "transform": Array [
              Object {
                "translateY": 0,
              },
            ],
          }
        }
        testID="course-details.title-lbl"
      >
        Learn React Native
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        collapsable={undefined}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Object {
            "backgroundColor": "transparent",
            "color": "white",
            "fontWeight": "600",
            "opacity": 1,
          }
        }
        testID="course-details.subtitle-lbl"
      >
        Default Term
      </Text>
    </View>
  </View>
  <Text
    accessible={false}
    allowFontScaling={true}
    collapsable={undefined}
    disabled={false}
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      Object {
        "backgroundColor": "transparent",
        "color": "#fff",
        "fontSize": 17,
        "fontWeight": "600",
        "left": 0,
        "opacity": 1,
        "paddingHorizontal": 60,
        "position": "absolute",
        "right": 0,
        "textAlign": "center",
        "top": 33,
      }
    }
  >
    rn 101
  </Text>
</View>
`;

exports[`renders correctly without tabs 1`] = `
<View
  onRefresh={undefined}
  refreshing={false}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
        "justifyContent": "flex-start",
      }
    }
  >
    <RCTScrollView
      automaticallyAdjustContentInsets={false}
      collapsable={undefined}
      contentInset={
        Object {
          "top": 235,
        }
      }
      contentInsetAdjustmentBehavior="never"
      contentOffset={
        Object {
          "y": 0,
        }
      }
      onScroll={[Function]}
      refreshControl={
        <RefreshControlMock
          onRefresh={undefined}
          refreshing={false}
          style={
            Object {
              "position": "absolute",
              "top": 235,
            }
          }
        />
      }
      scrollEventThrottle={1}
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <RCTRefreshControl />
      <View>
        <View
          style={
            Object {
              "minHeight": -64,
            }
          }
        />
      </View>
    </RCTScrollView>
  </View>
  <View
    collapsable={undefined}
    pointerEvents="none"
    style={
      Object {
        "alignItems": "center",
        "height": 235,
        "justifyContent": "center",
        "left": 0,
        "overflow": "hidden",
        "padding": 10,
        "paddingTop": 20,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <Image
          collapsable={undefined}
          resizeMode="cover"
          source={
            Object {
              "uri": "https://farm3.staticflickr.com/2926/14690771011_945f91045a.jpg",
            }
          }
          style={
            Object {
              "height": 235,
              "opacity": 1,
              "position": "absolute",
              "width": 0,
            }
          }
        />
        <View
          collapsable={undefined}
          style={
            Object {
              "backgroundColor": undefined,
              "bottom": 0,
              "left": 0,
              "opacity": 0.8,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "marginTop": 44,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        collapsable={undefined}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Object {
            "backgroundColor": "transparent",
            "color": "white",
            "fontSize": 24,
            "fontWeight": "600",
            "marginBottom": 3,
            "marginHorizontal": 0,
            "textAlign": "center",
            "transform": Array [
              Object {
                "translateY": 0,
              },
            ],
          }
        }
        testID="course-details.title-lbl"
      >
        Learn React Native
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        collapsable={undefined}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Object {
            "backgroundColor": "transparent",
            "color": "white",
            "fontWeight": "600",
            "opacity": 1,
          }
        }
        testID="course-details.subtitle-lbl"
      >
        Default Term
      </Text>
    </View>
  </View>
  <Text
    accessible={false}
    allowFontScaling={true}
    collapsable={undefined}
    disabled={false}
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      Object {
        "backgroundColor": "transparent",
        "color": "#fff",
        "fontSize": 17,
        "fontWeight": "600",
        "left": 0,
        "opacity": 1,
        "paddingHorizontal": 60,
        "position": "absolute",
        "right": 0,
        "textAlign": "center",
        "top": 33,
      }
    }
  >
    rn 101
  </Text>
</View>
`;

exports[`renders with empty image url 1`] = `
<View
  onRefresh={undefined}
  refreshing={false}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
        "justifyContent": "flex-start",
      }
    }
  >
    <RCTScrollView
      automaticallyAdjustContentInsets={false}
      collapsable={undefined}
      contentInset={
        Object {
          "top": 235,
        }
      }
      contentInsetAdjustmentBehavior="never"
      contentOffset={
        Object {
          "y": 0,
        }
      }
      onScroll={[Function]}
      refreshControl={
        <RefreshControlMock
          onRefresh={undefined}
          refreshing={false}
          style={
            Object {
              "position": "absolute",
              "top": 235,
            }
          }
        />
      }
      scrollEventThrottle={1}
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <RCTRefreshControl />
      <View>
        <View
          style={
            Object {
              "minHeight": -64,
            }
          }
        >
          <TouchableHighlight
            accessibilityLabel={undefined}
            accessibilityTraits={
              Array [
                "button",
              ]
            }
            onPress={[Function]}
            style={
              Array [
                undefined,
                Object {
                  "borderBottomColor": "#C7CDD1",
                  "borderBottomWidth": 0.5,
                },
              ]
            }
            testID="courses-details.assignments-cell"
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "white",
                    "flex": 1,
                    "flexDirection": "row",
                    "minHeight": 54,
                    "paddingBottom": 12,
                    "paddingLeft": 16,
                    "paddingRight": 16,
                    "paddingTop": 12,
                  },
                  Object {
                    "backgroundColor": "white",
                  },
                ]
              }
            >
              <Image
                source={1}
                style={
                  Array [
                    Object {
                      "marginRight": 16,
                      "resizeMode": "contain",
                    },
                    Object {
                      "height": 24,
                      "tintColor": undefined,
                      "width": 24,
                    },
                  ]
                }
              />
              <View
                style={
                  Object {
                    "flex": 1,
                    "flexDirection": "column",
                    "justifyContent": "center",
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  disabled={false}
                  ellipsizeMode="tail"
                  numberOfLines={0}
                  style={
                    Array [
                      Object {
                        "fontFamily": ".SFUIDisplay",
                      },
                      Object {
                        "color": "#2D3B45",
                        "fontSize": 16,
                      },
                      Array [
                        Object {
                          "fontWeight": "600",
                        },
                        Object {
                          "fontWeight": "500",
                          "marginLeft": -4,
                        },
                      ],
                      Object {
                        "fontFamily": ".SFUIDisplay-medium",
                      },
                    ]
                  }
                >
                  Home
                </Text>
              </View>
              <View
                style={
                  Object {
                    "flex": 0,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "flex": 1,
                      "flexDirection": "row",
                      "justifyContent": "flex-end",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "alignSelf": "center",
                        "backgroundColor": "transparent",
                        "borderColor": "#c7c7cc",
                        "borderRightWidth": 2,
                        "borderTopWidth": 2,
                        "height": 10,
                        "marginLeft": 7,
                        "transform": Array [
                          Object {
                            "rotate": "45deg",
                          },
                        ],
                        "width": 10,
                      }
                    }
                  />
                </View>
              </View>
            </View>
          </TouchableHighlight>
        </View>
      </View>
    </RCTScrollView>
  </View>
  <View
    collapsable={undefined}
    pointerEvents="none"
    style={
      Object {
        "alignItems": "center",
        "height": 235,
        "justifyContent": "center",
        "left": 0,
        "overflow": "hidden",
        "padding": 10,
        "paddingTop": 20,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          collapsable={undefined}
          style={
            Object {
              "backgroundColor": undefined,
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "marginTop": 44,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        collapsable={undefined}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Object {
            "backgroundColor": "transparent",
            "color": "white",
            "fontSize": 24,
            "fontWeight": "600",
            "marginBottom": 3,
            "marginHorizontal": 0,
            "textAlign": "center",
            "transform": Array [
              Object {
                "translateY": 0,
              },
            ],
          }
        }
        testID="course-details.title-lbl"
      >
        Learn React Native
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        collapsable={undefined}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Object {
            "backgroundColor": "transparent",
            "color": "white",
            "fontWeight": "600",
            "opacity": 1,
          }
        }
        testID="course-details.subtitle-lbl"
      >
        Default Term
      </Text>
    </View>
  </View>
  <Text
    accessible={false}
    allowFontScaling={true}
    collapsable={undefined}
    disabled={false}
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      Object {
        "backgroundColor": "transparent",
        "color": "#fff",
        "fontSize": 17,
        "fontWeight": "600",
        "left": 0,
        "opacity": 1,
        "paddingHorizontal": 60,
        "position": "absolute",
        "right": 0,
        "textAlign": "center",
        "top": 33,
      }
    }
  >
    rn 101
  </Text>
</View>
`;

exports[`renders with image url 1`] = `
<View
  onRefresh={undefined}
  refreshing={false}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
        "justifyContent": "flex-start",
      }
    }
  >
    <RCTScrollView
      automaticallyAdjustContentInsets={false}
      collapsable={undefined}
      contentInset={
        Object {
          "top": 235,
        }
      }
      contentInsetAdjustmentBehavior="never"
      contentOffset={
        Object {
          "y": 0,
        }
      }
      onScroll={[Function]}
      refreshControl={
        <RefreshControlMock
          onRefresh={undefined}
          refreshing={false}
          style={
            Object {
              "position": "absolute",
              "top": 235,
            }
          }
        />
      }
      scrollEventThrottle={1}
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <RCTRefreshControl />
      <View>
        <View
          style={
            Object {
              "minHeight": -64,
            }
          }
        >
          <TouchableHighlight
            accessibilityLabel={undefined}
            accessibilityTraits={
              Array [
                "button",
              ]
            }
            onPress={[Function]}
            style={
              Array [
                undefined,
                Object {
                  "borderBottomColor": "#C7CDD1",
                  "borderBottomWidth": 0.5,
                },
              ]
            }
            testID="courses-details.assignments-cell"
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "white",
                    "flex": 1,
                    "flexDirection": "row",
                    "minHeight": 54,
                    "paddingBottom": 12,
                    "paddingLeft": 16,
                    "paddingRight": 16,
                    "paddingTop": 12,
                  },
                  Object {
                    "backgroundColor": "white",
                  },
                ]
              }
            >
              <Image
                source={1}
                style={
                  Array [
                    Object {
                      "marginRight": 16,
                      "resizeMode": "contain",
                    },
                    Object {
                      "height": 24,
                      "tintColor": undefined,
                      "width": 24,
                    },
                  ]
                }
              />
              <View
                style={
                  Object {
                    "flex": 1,
                    "flexDirection": "column",
                    "justifyContent": "center",
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  disabled={false}
                  ellipsizeMode="tail"
                  numberOfLines={0}
                  style={
                    Array [
                      Object {
                        "fontFamily": ".SFUIDisplay",
                      },
                      Object {
                        "color": "#2D3B45",
                        "fontSize": 16,
                      },
                      Array [
                        Object {
                          "fontWeight": "600",
                        },
                        Object {
                          "fontWeight": "500",
                          "marginLeft": -4,
                        },
                      ],
                      Object {
                        "fontFamily": ".SFUIDisplay-medium",
                      },
                    ]
                  }
                >
                  Home
                </Text>
              </View>
              <View
                style={
                  Object {
                    "flex": 0,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "flex": 1,
                      "flexDirection": "row",
                      "justifyContent": "flex-end",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "alignSelf": "center",
                        "backgroundColor": "transparent",
                        "borderColor": "#c7c7cc",
                        "borderRightWidth": 2,
                        "borderTopWidth": 2,
                        "height": 10,
                        "marginLeft": 7,
                        "transform": Array [
                          Object {
                            "rotate": "45deg",
                          },
                        ],
                        "width": 10,
                      }
                    }
                  />
                </View>
              </View>
            </View>
          </TouchableHighlight>
        </View>
      </View>
    </RCTScrollView>
  </View>
  <View
    collapsable={undefined}
    pointerEvents="none"
    style={
      Object {
        "alignItems": "center",
        "height": 235,
        "justifyContent": "center",
        "left": 0,
        "overflow": "hidden",
        "padding": 10,
        "paddingTop": 20,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <Image
          collapsable={undefined}
          resizeMode="cover"
          source={
            Object {
              "uri": "http://www.fillmurray.com/100/100",
            }
          }
          style={
            Object {
              "height": 235,
              "opacity": 1,
              "position": "absolute",
              "width": 0,
            }
          }
        />
        <View
          collapsable={undefined}
          style={
            Object {
              "backgroundColor": undefined,
              "bottom": 0,
              "left": 0,
              "opacity": 0.8,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "marginTop": 44,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        collapsable={undefined}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Object {
            "backgroundColor": "transparent",
            "color": "white",
            "fontSize": 24,
            "fontWeight": "600",
            "marginBottom": 3,
            "marginHorizontal": 0,
            "textAlign": "center",
            "transform": Array [
              Object {
                "translateY": 0,
              },
            ],
          }
        }
        testID="course-details.title-lbl"
      >
        Learn React Native
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        collapsable={undefined}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Object {
            "backgroundColor": "transparent",
            "color": "white",
            "fontWeight": "600",
            "opacity": 1,
          }
        }
        testID="course-details.subtitle-lbl"
      >
        Default Term
      </Text>
    </View>
  </View>
  <Text
    accessible={false}
    allowFontScaling={true}
    collapsable={undefined}
    disabled={false}
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      Object {
        "backgroundColor": "transparent",
        "color": "#fff",
        "fontSize": 17,
        "fontWeight": "600",
        "left": 0,
        "opacity": 1,
        "paddingHorizontal": 60,
        "position": "absolute",
        "right": 0,
        "textAlign": "center",
        "top": 33,
      }
    }
  >
    rn 101
  </Text>
</View>
`;

exports[`renders without image url 1`] = `
<View
  onRefresh={undefined}
  refreshing={false}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
        "justifyContent": "flex-start",
      }
    }
  >
    <RCTScrollView
      automaticallyAdjustContentInsets={false}
      collapsable={undefined}
      contentInset={
        Object {
          "top": 235,
        }
      }
      contentInsetAdjustmentBehavior="never"
      contentOffset={
        Object {
          "y": 0,
        }
      }
      onScroll={[Function]}
      refreshControl={
        <RefreshControlMock
          onRefresh={undefined}
          refreshing={false}
          style={
            Object {
              "position": "absolute",
              "top": 235,
            }
          }
        />
      }
      scrollEventThrottle={1}
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <RCTRefreshControl />
      <View>
        <View
          style={
            Object {
              "minHeight": -64,
            }
          }
        >
          <TouchableHighlight
            accessibilityLabel={undefined}
            accessibilityTraits={
              Array [
                "button",
              ]
            }
            onPress={[Function]}
            style={
              Array [
                undefined,
                Object {
                  "borderBottomColor": "#C7CDD1",
                  "borderBottomWidth": 0.5,
                },
              ]
            }
            testID="courses-details.assignments-cell"
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "white",
                    "flex": 1,
                    "flexDirection": "row",
                    "minHeight": 54,
                    "paddingBottom": 12,
                    "paddingLeft": 16,
                    "paddingRight": 16,
                    "paddingTop": 12,
                  },
                  Object {
                    "backgroundColor": "white",
                  },
                ]
              }
            >
              <Image
                source={1}
                style={
                  Array [
                    Object {
                      "marginRight": 16,
                      "resizeMode": "contain",
                    },
                    Object {
                      "height": 24,
                      "tintColor": undefined,
                      "width": 24,
                    },
                  ]
                }
              />
              <View
                style={
                  Object {
                    "flex": 1,
                    "flexDirection": "column",
                    "justifyContent": "center",
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  disabled={false}
                  ellipsizeMode="tail"
                  numberOfLines={0}
                  style={
                    Array [
                      Object {
                        "fontFamily": ".SFUIDisplay",
                      },
                      Object {
                        "color": "#2D3B45",
                        "fontSize": 16,
                      },
                      Array [
                        Object {
                          "fontWeight": "600",
                        },
                        Object {
                          "fontWeight": "500",
                          "marginLeft": -4,
                        },
                      ],
                      Object {
                        "fontFamily": ".SFUIDisplay-medium",
                      },
                    ]
                  }
                >
                  Home
                </Text>
              </View>
              <View
                style={
                  Object {
                    "flex": 0,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "flex": 1,
                      "flexDirection": "row",
                      "justifyContent": "flex-end",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "alignSelf": "center",
                        "backgroundColor": "transparent",
                        "borderColor": "#c7c7cc",
                        "borderRightWidth": 2,
                        "borderTopWidth": 2,
                        "height": 10,
                        "marginLeft": 7,
                        "transform": Array [
                          Object {
                            "rotate": "45deg",
                          },
                        ],
                        "width": 10,
                      }
                    }
                  />
                </View>
              </View>
            </View>
          </TouchableHighlight>
        </View>
      </View>
    </RCTScrollView>
  </View>
  <View
    collapsable={undefined}
    pointerEvents="none"
    style={
      Object {
        "alignItems": "center",
        "height": 235,
        "justifyContent": "center",
        "left": 0,
        "overflow": "hidden",
        "padding": 10,
        "paddingTop": 20,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          collapsable={undefined}
          style={
            Object {
              "backgroundColor": undefined,
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "marginTop": 44,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        collapsable={undefined}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Object {
            "backgroundColor": "transparent",
            "color": "white",
            "fontSize": 24,
            "fontWeight": "600",
            "marginBottom": 3,
            "marginHorizontal": 0,
            "textAlign": "center",
            "transform": Array [
              Object {
                "translateY": 0,
              },
            ],
          }
        }
        testID="course-details.title-lbl"
      >
        Learn React Native
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        collapsable={undefined}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Object {
            "backgroundColor": "transparent",
            "color": "white",
            "fontWeight": "600",
            "opacity": 1,
          }
        }
        testID="course-details.subtitle-lbl"
      >
        Default Term
      </Text>
    </View>
  </View>
  <Text
    accessible={false}
    allowFontScaling={true}
    collapsable={undefined}
    disabled={false}
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      Object {
        "backgroundColor": "transparent",
        "color": "#fff",
        "fontSize": 17,
        "fontWeight": "600",
        "left": 0,
        "opacity": 1,
        "paddingHorizontal": 60,
        "position": "absolute",
        "right": 0,
        "textAlign": "center",
        "top": 33,
      }
    }
  >
    rn 101
  </Text>
</View>
`;
